--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: page
 title: My website
 subtitle: This is where I will tell my friends way too much about me
 use-site-title: true
+bigimg: 
+  - "/img/Wattpad_logo.png" : "comment"
 ---
 
 <div class="posts-list">
